# Engineer2023

./: README.md
exchange_recg/: CMakeLists.txt  package.xml
exchange_recg/cfg/: params.yaml
exchange_recg/include/exchange_recg/: auxPoint.h  config.h  edge.h  manager.h  square.h  triangle.h  utils.h
exchange_recg/launch/: cv_cam.launch  usb_cam.launch  usb_cam.sh
exchange_recg/src/: auxPoints.cpp  edge.cpp  main.cpp  manager.cpp  square.cpp  triangle.cpp  utils.cpp
robot_serial/: CMakeLists.txt
robot_serial/src/: main.cpp
